Use lower case for names

--- a/crunch_default.ini
+++ b/crunch_default.ini
@@ -2,7 +2,7 @@
 # Ini file format.  Section headings are case sensitive
 # reset is case insensitive
 [DEFAULT]
-showTime=True
+showtime=True
 
 grid=True
 text="hello"
