Only run ax3_seconds_stats.py on the total acceleration

--- a/crunch_default.ini
+++ b/crunch_default.ini
@@ -36,11 +36,6 @@ text="hello"
 [std_dev_total]
 
 # These are the settings for the ax3_seconds_stats run
-[seconds_x]
-limit=0.05
-[seconds_y]
-limit=0.05
-[seconds_z]
-limit=0.05
-[seconds_total]
+[seconds_stat]
+axis=3
 limit=0.05
