Don't call ax3_seconds_stats.py multiple times

--- a/crunch_default.ini
+++ b/crunch_default.ini
@@ -5,12 +5,18 @@
 showtime=True
 
 grid=True
-text="hello"
 
 #controlfile=blah
 #bcontrolfile=blah
 #ymin=0.5
 #ymax=10
+
+ax3_seconds_stat=True
+
+# Set these to False to disable these scripts globally
+# Add entries to each section [mean_x] etc below to
+# enable them on a per-statistic basis
+ax3_plot_minutes=True
 
 [mean_x]
 # Put non-default versions of the above settings here
